--- a/client/src/app/Components/aboutus/aboutus.component.html
+++ b/client/src/app/Components/aboutus/aboutus.component.html
@@ -6,7 +6,7 @@
     <!-- Section 1 -->
     <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-7">
+          <div class="col-sm-7 pl-4">
             <h2>About Us:</h2>
             <hr>
             <h5>
@@ -17,6 +17,7 @@
                 <br> <br>
                 Car Wash is here to stay and work dedicatedly towards spreading the awareness among car users about their car hygiene habits, cleanliness, durability of exterior look and other common cleaning tips.
             </h5>
+            <button class="btn btn-primary mt-4" routerLink="/signup">JOIN THE NETWORK</button>
           </div>
           <div class="col-sm-5" style="text-align: center; padding-top: 90px;">
             <fa-icon id="chart" [icon]="chartLine"></fa-icon>
