--- a/client/src/app/Components/home/home.component.html
+++ b/client/src/app/Components/home/home.component.html
@@ -126,7 +126,7 @@
         <!-- Button for signup -->
         <div id="gallerybutton"> 
             <span>And many more... Find out by signing up now!</span> <br> <br>
-            <button type="button" class="btn btn-primary btn-lg">SIGN UP</button>
+            <button type="button" class="btn btn-primary btn-lg" routerLink ="/signup">SIGN UP</button>
         </div>
         
     </div>
@@ -184,7 +184,7 @@
             <br> <br>
             <div id="washerbutton"> 
                 <span>Join the network now! Click on the below button to register.</span> <br> <br>
-                <button type="button" class="btn btn-dark btn-lg">REGISTER</button>
+                <button type="button" class="btn btn-dark btn-lg" routerLink ="/signup">REGISTER</button>
             </div>
         </div> 
         
