--- a/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.html
+++ b/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.html
@@ -1,14 +1,15 @@
-<div class="d-flex" id="wrapper">
+<div class="d-flex" id="wrapper"  [ngClass]="status ? 'toggled' : '' " >
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">MENU</div>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink ="/customerDashboard">Dashboard</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">MyOrders</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Scheduled Washes</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Book a Wash</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink ="customerHome">Home</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerProfile">Profile</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerOrder">Book a Wash</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerScheduledOrders">Scheduled Washes</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerOrders">My Orders</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="leaderboard">Leaderboard</a>
       </div>
     </div>
     
@@ -16,16 +17,12 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-            <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+            <button class="btn btn-primary" id="menu-toggle" (click) = "toggleClass()"><fa-icon [icon]="barsIcon"></fa-icon></button>
         </nav>
-      <div class="container-fluid">
-        <h1 class="mt-4">Simple Sidebar</h1>
-        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
-      </div>
+
+        <div class="container-fluid">
+            <router-outlet></router-outlet>
+        </div>
     </div>
      
 </div>
