--- a/client/src/app/Components/Customer/customerprofile/customerprofile.component.html
+++ b/client/src/app/Components/Customer/customerprofile/customerprofile.component.html
@@ -1,1 +1,52 @@
-<p>customerprofile works!</p>
+<form  #profileForm="ngForm" class="col-sm-8 mx-auto profile" (ngSubmit)="submitProfileData(profileForm)" ngNativeValidate>
+  <h2 class="heading">Profile Details</h2>
+  <div class="form-row">
+      <div *ngIf="details.length>0" class="form-group col-md-6">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" name= "name" [ngModel]="details[0][0]?.name"  (ngModelChange)="details[0].name =$event" required  >
+        <small class="text-danger">{{nameError}}</small>
+      </div>
+      <div *ngIf="details.length>0" class="form-group col-md-6">
+        <label for="mobile">Mobile</label>
+        <input type="tel" class="form-control" id="mobile" name="mobile" [ngModel]="details[0][0]?.mobile"  (ngModelChange)="details[0][0].mobile =$event" required >
+        <small class="text-danger">{{mobileError}}</small>
+      </div>
+    </div>
+    <div *ngIf="details.length>0" class="form-group">
+      <label for="address">Address</label>
+      <input type="text" class="form-control" id="address" name="address" [ngModel]="details[0][0]?.addresses.address" (ngModelChange)="details[0][0].addresses.address =$event" required >
+    </div>
+    <div *ngIf="details.length>0" class="form-row">
+      <div class="form-group col-md-6">
+        <label for="city">City</label>
+        <input type="text" class="form-control" id="city" name="city" [ngModel]="details[0][0]?.addresses.city" (ngModelChange)="details[0][0].addresses.city =$event" required >
+      </div>
+      <div class="form-group col-md-4">
+        <label for="country">Country</label>
+        <input type="text" class="form-control" id="country" name="country" [ngModel]="details[0][0]?.addresses.country" (ngModelChange)="details[0][0].addresses.country =$event" required >
+      </div>
+      <div class="form-group col-md-2">
+        <label for="zipcode">Zipcode</label>
+        <input type="text" class="form-control" id="zipcode" name="zipcode" [ngModel]="details[0][0]?.addresses.zipcode" (ngModelChange)="details[0][0].addresses.zipcode =$event" required >
+      </div>
+    </div>
+    <div *ngIf="details.length>0" class="form-row">
+      <div class="form-group col-md-6">
+        <label for="car">Select car name and model</label>
+        <select  name="car" id="car" class="form-control" name="car" ngModel required >
+          <option selected readonly>Choose the car</option>
+          <option *ngFor="let car of cars[0]">
+            {{car.name | uppercase }},{{car.model | uppercase}}  
+        </option>
+        </select>
+      </div>
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">CREATE</button>  &nbsp; 
+    <button type="button" class="btn btn-warning" routerLink ="../editcustomerProfile">EDIT</button> <br> <br>
+    <small class="text-danger">{{userError}}</small>
+    <div *ngIf="showMsg">
+      {{message}}
+    </div>
+</form>
+  
