--- a/client/src/app/Components/signup/signup.component.css
+++ b/client/src/app/Components/signup/signup.component.css
@@ -27,3 +27,14 @@
   color: black;
   padding: 20px;
 }
+
+
+.message{
+  background-color: rgb(9, 151, 9);
+  padding: 7px;
+  font-size: 18px;
+  margin-top: 30px;
+  border-radius: 5px;
+  text-align: center;
+  color: white;
+}
