--- a/client/src/app/Components/signup/signup.component.html
+++ b/client/src/app/Components/signup/signup.component.html
@@ -1,33 +1,43 @@
 <span id="heading">Sign Up Now!</span>
 <div class="signupForm">
-
+    <div id="icon">
+      <fa-icon id="userIcon" [icon]="user"></fa-icon>
+    </div>
    
     <!-- Form -->
-    <form #signupForm>
-        <div id="icon">
-          <fa-icon id="userIcon" [icon]="user"></fa-icon>
-        </div> 
-
-        <!-- EMAIL INPUT -->
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <div class=" input-group mb-3">
-          <input type="email" class="form-control" id="email" name ="email" aria-describedby="emailHelp">
-          <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon1"><fa-icon [icon] ="envelope" size="lg"></fa-icon></span>
-          </div>
-          <div id="emailHelp" class="form-text"></div>
+    <form #signupForm="ngForm" (ngSubmit) = "register(signupForm)" ngNativeValidate>
+         
+        <!-- EMAIL INPUT --> 
+        <div class="form-group mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" name ="email" ngModel required>
+          <small class="text-danger" > {{emailError}}</small> 
         </div>
 
-        <!-- PASSWORD INPUT -->
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <div class="input-group mb-3">
-          <input #pass type="password" class="form-control" id="password" name="password">
-          <div class="input-group-append">
+        <!-- PASSWORD INPUT --> 
+        <div class="form-group mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" ngModel required>
+         <small class="text-danger"> {{passwordError}}</small> 
+          <!-- <div class="input-group-append">
             <span class="input-group-text"><a #textpass (click)="showpass(pass,textpass)">Show</a></span>
-          </div>  
+          </div>   -->
         </div>
-        
+
+        <!-- ROLE INPUT --> 
+        <div class="form-group mb-3">
+          <label for="role" class="form-label">Who are you? (Select One)</label>
+          <select class="form-control" id="role" name="role" [(ngModel)]="selected" required >
+            <option value="Customer">Customer</option>
+            <option value="Washer">Washer</option>
+          </select>
+        </div>
+       
         <button type="submit" class="btn btn-primary">Create Account</button> &nbsp;
         <small>Already have an account? <a role="button" routerLink='/login'>Login</a></small>
     </form>
+     
+    <div *ngIf= "showMessage" class="message">
+      <p>{{succcessMsg}}</p>
+    </div>
 </div>
