added customer features

--- a/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.html
+++ b/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.html
@@ -9,7 +9,7 @@
         <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerOrder">Book a Wash</a>
         <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerScheduledOrders">Scheduled Washes</a>
         <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="customerOrders">My Orders</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="leaderboard">Leaderboard</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="leaderboard">Leaderboard &nbsp; <span class="badge badge-warning">NEW</span></a>
       </div>
     </div>
     
