--- a/client/src/app/Components/Customer/customer-home/customer-home.component.html
+++ b/client/src/app/Components/Customer/customer-home/customer-home.component.html
@@ -1,11 +1,15 @@
 <div class="wrapper">
     <p class="heading"> WELCOME</p>
     <div class="content">
-        <p>
-            Avail the benefits of all the new offers, our customers are what that drives us to work hard everday. <br> <br>
-            A feature rich dashboard, provides you to edit your profile, Order a new wash and manage existing orders. Explore all the features from the side navigation bar. <br> <br>
-            Introducing new feature...LEADERBOARDS..helps you know about customer wash rankings.
-
-        </p>
+        <ul>
+            <li>Avail the benefits of all the new offers, our customers are what that drives us to work hard everday. </li> <br>
+            <li>A feature rich dashboard, provides you to edit your profile, Order a new wash and manage existing orders. Explore all the features from the side navigation bar.</li> <br>
+            <li>Introducing new feature... <b class="text-primary">LEADERBOARDS</b> ...helps you know about customer wash rankings. Find this feature on the side panel. </li> <br>
+            <li> 
+                If you are a new user, you must first create your profile, before booking a wash. The profile creation process is made to be completed within seconds, saving your valuable time. <br> <br>
+            <button class="btn btn-secondary" routerLink="../customerProfile">Create Profile</button> &nbsp;
+            <button class="btn btn-info" routerLink="../customerOrder">Book a Wash</button>
+            </li>
+        </ul>
     </div>
 </div>
