--- a/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.css
+++ b/client/src/app/Components/Customer/customerdashboard/customerdashboard.component.css
@@ -38,3 +38,10 @@
       margin-left: -15rem;
     }
 }
+
+
+.badge{
+  padding: 10px;
+  border: 1px solid rgb(255, 255, 4);
+  font-size: .8em;
+}
