--- a/client/src/app/Components/Admin/plans-management/plans-management.component.html
+++ b/client/src/app/Components/Admin/plans-management/plans-management.component.html
@@ -20,7 +20,7 @@
         <th scope="row">{{i+1}}</th>
         <td> {{plan.name}} </td>
         <td> {{plan.time}} </td>
-        <td> {{plan.cost}} </td>
+        <td> ₹{{plan.cost}} </td>
         <td> {{plan.status}} </td>
         <td>
           <button class="btn btn-warning" [routerLink]="['../editPlan', plan._id]">EDIT</button> &nbsp;
