--- a/client/src/app/Components/Admin/washer-approval/washer-approval.component.html
+++ b/client/src/app/Components/Admin/washer-approval/washer-approval.component.html
@@ -1,5 +1,8 @@
 <div class="heading">Approve/Reject Washers</div> <br>
-<div class="table-responsive"> 
+<div *ngIf="washers.length == 0">
+  <h5 class="text-center text-info">No washer approval requests to show</h5>
+</div>
+<div *ngIf="washers.length != 0" class="table-responsive"> 
   <table class="table table-hover">
     <thead class="thead-light">
       <tr>
@@ -9,7 +12,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor= "let washer of washers[0]; let i = index">
+      <tr *ngFor= "let washer of washers; let i = index">
         <th scope="row">{{i}}</th>
         <td> {{washer.email}} </td>
         <td>
